<resources>
    <string name="app_name">AllerCheck</string>
    <string name="allercheck">AllerCheck</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="eslogan1">Menja sense por,</string>
    <string name="eslogan2">gaudeix amb confiança.</string>
    <string name="punt_1">✓ Filtres avançats i personalitzats</string>
    <string name="punt_2">✓ Comunitat de usuaris verificada</string>
    <string name="punt_3">✓ Protocols de seguretat garantits</string>
    <string name="comencar">Començar</string>
    <string name="inici_sessi">Inici Sessió</string>
    <string name="email">Email:</string>
    <string name="contrasenya">Contrasenya:</string>
    <string name="accedir">Accedir</string>
    <string name="registrar_me">Registrar-me</string>
    <string name="registre">Registre</string>
    <string name="nom">Nom:</string>
    <string name="registrarme">Registrar-me</string>
    <string name="accepto_condicions">Accepto Condicions</string>
    <string name="continuar_sense_compte">Continuar sense compte</string>
    <string name="flechaatras">flechaAtras</string>
    <string name="perfil">Perfil</string>
    <string name="rese_as">Reseñas</string>
    <string name="la_meva_informaci">La meva informació:</string>
    <string name="joan_mart_nez">Joan Martínez</string>
    <string name="joan_gmail_com">joan@gmail.com</string>
    <string name="les_meves_resriccions">Les meves resriccions</string>
    <string name="les_meves_ressenyes">Les meves ressenyes</string>
    <string name="tancar_sessi">Tancar Sessió</string>
    <string name="favoritos">favoritos</string>
    <string name="inicio">inicio</string>
    <string name="nova_ressenya">Nova Ressenya</string>
    <string name="escriu_la_teva_ressenya">Escriu la teva ressenya:</string>
    <string name="confirma_seguretat">Confirma Seguretat</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>
    <string name="prefer_ncies">Preferències</string>
    <string name="les_meves_al_l_rgies">Les meves al·lèrgies:</string>
    <string name="sense_gluten">Sense gluten</string>
    <string name="sense_lactosa">Sense lactosa</string>
    <string name="fruits_secs">Fruits secs</string>
    <string name="marisc">Marisc</string>
    <string name="vega">Vegà</string>
    <string name="halal">Halal</string>
    <string name="kosher">Kosher</string>
    <string name="ou">Ou</string>
    <string name="_4_9">4,9</string>
    <string name="japon_s">Japonès</string>
    <string name="carrer_major_23">Carrer major, 23</string>
    <string name="telefon">telefon</string>
    <string name="ubicaci">Ubicació</string>
    <string name="protocols">Protocols:</string>
    <string name="_34_623_45_98_12">+34 623 45 98 12</string>
    <string name="cuina_separada">• Cuina Separada</string>
    <string name="olis_exclusius">• Olis Exclusius</string>
    <string name="perfecte">‣ Perfecte!</string>
    <string name="molt_segur">‣ Molt segur!</string>
    <string name="afegir_ressenya">Afegir Ressenya</string>
    <string name="ressenyes">Ressenyes:</string>
    <string name="_20_30">20€ - 30€</string>
    <string name="cercar">Cercar...</string>
    <string name="filters">Filters:</string>
    <string name="x_gluten">x gluten</string>
    <string name="x_lacotsa">x lacotsa</string>
    <string name="restaurant_tokyo">‣ Restaurant Tokyo</string>
    <string name="verificat">Verificat</string>
    <string name="_5">5</string>
    <string name="la_pizzeria">‣ La Pizzeria</string>
    <string name="veggie_paradise">‣ Veggie Paradise</string>
    <string name="no_verificat">No Verificat</string>
    <string name="_4">4</string>
    <string name="preferits">Preferits</string>
    <string name="restaurant_tokyoo">Restaurant Tokyo</string>
    <string name="borrar">Borrar</string>
    <string name="molt_bona">Molt bona experiència</string>
    <string name="basic">Bàsic però segur</string>
    <string name="les_meves_ressenyess">Les meves ressenyes</string>
    <string name="atras">Atras</string>
    <string name="afegir_una_nova_ress">Afegir una nova ressenya</string>
    <string name="ya_tienes_cuenta">Ja tens compte</string>
    <string name="stats">Estadístiques</string>
    <string name="editar_ressenya">editar ressenya</string>
    <string name="ressenyes_totals">Ressenyes totals</string>
    <string name="estad_stiques_s">ESTADÍSTIQUES ÚS</string>
    <string name="reset_estad_stiques">RESET ESTADÍSTIQUES</string>
    <string name="estad_stiques_i_co2">Estadístiques i CO2</string>
    <string name="co2_0_0kg">CO2: 0.0kg</string>
</resources>
