<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app"
    tools:context=".activity_profile">

    <LinearLayout
        android:id="@+id/cabezeraLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/fondo_app"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:textColor="@color/black"
            android:letterSpacing="0.05"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="serif" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnResenas"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:padding="8dp"
        android:backgroundTint="@color/fondo_app"
        android:contentDescription="@string/rese_as"
        android:src="@drawable/baseline_star_rate_24"
        app:tint="@color/verde"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/lineaLay"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"/>

    <ImageButton
        android:id="@+id/btnAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fondo_app"
        android:contentDescription="@string/flechaatras"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/lineaLay"
        app:tint="@color/verde"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"/>

    <View
        android:id="@+id/lineaLay"
        android:layout_width="match_parent"
        android:background="@color/verde"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/cabezeraLay"/>

    <TextView
        android:id="@+id/tvInformacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/la_meva_informaci"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@id/lineaLay"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/llNom"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_redondo_verde"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInformacio">

        <TextView
            android:id="@+id/tvNomUsuari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/joan_mart_nez"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_redondo_verde"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/llNom"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvEmailUsuari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/joan_gmail_com"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnRestriccions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/les_meves_resriccions"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="18sp"
        android:backgroundTint="@color/verde"
        app:cornerRadius="5dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnRessenyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnRestriccions"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/les_meves_ressenyes"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="18sp"
        android:backgroundTint="@color/verde"
        app:cornerRadius="5dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnTancarSessio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnRessenyes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/tancar_sessi"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="25sp"
        android:backgroundTint="@color/verde"
        app:cornerRadius="5dp"
        android:padding="20dp"/>

    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/verde"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btnNav1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:padding="8dp"
            android:src="@drawable/baseline_house_24"
            app:tint="@android:color/white"
            android:contentDescription="@string/inicio"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/btnNav2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:padding="8dp"
            android:src="@drawable/baseline_favorite_24"
            app:tint="@android:color/white"
            android:contentDescription="@string/favoritos"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/btnNav3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:padding="8dp"
            android:src="@drawable/baseline_person_24"
            app:tint="@android:color/white"
            android:contentDescription="@string/perfil"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>