<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app"
    android:padding="32dp"
    tools:context=".activity_onboarding">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="serif"
        android:text="@string/allercheck"
        android:textColor="@color/texto_principal"
        android:textSize="48sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/baseline_check_24"
        app:drawableTint="@color/verde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/slogan1Lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:id="@+id/slogan1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eslogan1"
            android:textColor="@color/texto_secundari"
            android:textSize="18sp"
            android:textStyle="italic" />

        <View
            android:id="@+id/lineaS1"
            android:layout_width="148dp"
            android:layout_height="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:background="@color/verde" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/slogan2Lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@+id/slogan1Lay">
        <!-- RESTRICCIÓN CORREGIDA: Eliminado layout_constraintBottom_toTopOf -->

        <View
            android:id="@+id/lineaS2"
            android:layout_width="94dp"
            android:layout_height="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="12dp"
            android:background="@color/verde" />

        <TextView
            android:id="@+id/slogan2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eslogan2"
            android:textColor="@color/texto_secundari"
            android:textSize="18sp"
            android:textStyle="italic" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/listadito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan2Lay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/punt_1"
            android:textColor="@color/texto_principal"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/baseline_search_24"
            app:drawableTint="@color/verde" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/punt_2"
            android:textColor="@color/texto_principal"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/baseline_family_restroom_24"
            app:drawableTint="@color/verde" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/punt_3"
            android:textColor="@color/texto_principal"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/baseline_security_24"
            app:drawableTint="@color/verde" />

    </LinearLayout>

    <Button
        android:id="@+id/btnComencar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/verde"
        android:fontFamily="serif"
        android:padding="16dp"
        android:text="@string/comencar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listadito" />

    <Button
        android:id="@+id/btnSinCopte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fondo_app"
        android:text="@string/continuar_sense_compte"
        android:textColor="@color/verde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnComencar" />

</androidx.constraintlayout.widget.ConstraintLayout>

