<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app"
    tools:context=".activity_config_restrictions">

    <LinearLayout
        android:id="@+id/cabezeraLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/fondo_app"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefer_ncies"
            android:textColor="@color/black"
            android:letterSpacing="0.05"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="serif"
            app:drawableEndCompat="@drawable/baseline_preferencias_24"
            app:drawableTint="@color/verde"/>

    </LinearLayout>



    <ImageButton
        android:id="@+id/btnAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fondo_app"
        android:contentDescription="@string/flechaatras"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/lineaLay"
        app:tint="@color/verde"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"/>

    <View
        android:id="@+id/lineaLay"
        android:layout_width="match_parent"
        android:background="@color/verde"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/cabezeraLay"/>

    <TextView
        android:id="@+id/tvAlerg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/les_meves_al_l_rgies"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@id/lineaLay"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/LlSinGluten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvAlerg"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        >
        <CheckBox
            android:id="@+id/cbSinGluten"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sense_gluten"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LlSinLactosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/LlSinGluten"
        app:layout_constraintStart_toStartOf="parent"
        >
        <CheckBox
            android:id="@+id/cbSinLactosa"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sense_lactosa"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LlFruitsSecs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/LlSinLactosa"
        app:layout_constraintStart_toStartOf="parent"
        >
        <CheckBox
            android:id="@+id/cbFruitsSecs"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fruits_secs"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LlMarisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/LlFruitsSecs"
        app:layout_constraintStart_toStartOf="parent"
        >
        <CheckBox
            android:id="@+id/cbMarisc"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marisc"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LlVega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/LlMarisc"
        app:layout_constraintStart_toStartOf="parent"
        >
        <CheckBox
            android:id="@+id/cbVega"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vega"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LlHalal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/LlVega"
        app:layout_constraintStart_toStartOf="parent"
        >
        <CheckBox
            android:id="@+id/cbHalal"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/halal"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LlKosher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/LlHalal"
        app:layout_constraintStart_toStartOf="parent"
        >
        <CheckBox
            android:id="@+id/cbKosher"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kosher"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LlOu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/LlKosher"
        app:layout_constraintStart_toStartOf="parent"
        >
        <CheckBox
            android:id="@+id/cbOu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ou"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnGuardar"
        app:layout_constraintTop_toBottomOf="@id/LlOu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/verde"
        app:cornerRadius="5dp"
        android:padding="15dp"
    />




</androidx.constraintlayout.widget.ConstraintLayout>
